--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Assembly AI</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css"> 
 </head>
-<script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
+<!-- <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script> -->
 <body>
   <header>
     <h1 class="header__title">Real-Time Transcription</h1>
@@ -17,11 +17,12 @@
   <div class="real-time-interface">
     <p id="real-time-title" class="real-time-interface__title">Click to begin recording!</p>
     <button id="button">
-        <p  class="real-time-interface__button">Start</p>
+        <!-- <p  class="real-time-interface__button">Start</p> -->
     </button>
     <p id="message" class="real-time-interface__message"></p>
   </div>
+  <script src="/js/index.js"></script>
 
-  <script src="./js/index.js"></script>
 </body>
+
 </html>
