--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css"> 
 </head>
-<!-- <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script> -->
+<script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
 <body>
   <header>
     <h1 class="header__title">Real-Time Transcription</h1>
